--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Binary Browser</title>
+  <title>The Purple Pulsars</title>
 </head>
 <body>
-  <h1>Binary Browser</h1>
-  <p>Official website</p>
+  <h1>The Purple Pulsars</h1>
+  <p>Apps by The Purple Pulsars</p>
+  <a href="/binary-browser/">Binary Browser</a>
 </body>
 </html>
